Start working on class survey form
